--- a/app/src/main/res/drawable/bg_image_with_border.xml
+++ b/app/src/main/res/drawable/bg_image_with_border.xml
@@ -1,8 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/bg_white" />
-    <stroke android:width="1dp" android:color="@color/teal_primary" />
-    <corners android:radius="0dp" />
-    <padding android:left="0dp" android:top="0dp"
-             android:right="0dp" android:bottom="0dp" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<item
+    android:state_selected="true">
+    <shape xmlns:android="http://schemas.android.com/apk/res/android">
+        <solid android:color="@color/bg_white" />
+        <stroke android:width="1dp" android:color="@color/teal_primary" />
+        <corners android:radius="0dp" />
+        <padding android:left="0dp" android:top="0dp"
+                 android:right="0dp" android:bottom="0dp" />
+    </shape>
+
+</item>
+<item
+    android:state_pressed="true">
+    <shape xmlns:android="http://schemas.android.com/apk/res/android">
+        <solid android:color="@color/gray_light" />
+        <stroke android:width="1dp" android:color="@color/teal_primary" />
+        <corners android:radius="0dp" />
+        <padding android:left="0dp" android:top="0dp"
+                 android:right="0dp" android:bottom="0dp" />
+    </shape>
+</item>
+<item>
+    <shape xmlns:android="http://schemas.android.com/apk/res/android">
+        <solid android:color="@color/bg_light_gray" />
+        <stroke android:width="1dp" android:color="@color/teal_primary" />
+        <corners android:radius="0dp" />
+        <padding android:left="0dp" android:top="0dp"
+                 android:right="0dp" android:bottom="0dp" />
+    </shape>
+
+</item>
+
+</selector>
