--- a/app/src/main/res/layout/activity_running.xml
+++ b/app/src/main/res/layout/activity_running.xml
@@ -104,17 +104,54 @@
     <LinearLayout
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:background="@color/teal_light"
+        android:background="@color/bg_light_gray"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2">
         <ImageView
+            android:id="@+id/iv_take_photo"
+            android:clickable="true"
             android:layout_marginLeft="10dp"
             android:background="@drawable/bg_image_with_border"
             android:src="@mipmap/ic_camera"
             android:padding="20dp"
-            android:layout_width="70dp"
-            android:layout_height="70dp"/>
+            android:layout_width="@dimen/photo_thumbnail_length"
+            android:layout_height="@dimen/photo_thumbnail_length"/>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/photo_thumbnail_length">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <View
+                    android:layout_marginLeft="10dp"
+                    android:background="@color/bg_white"
+                    android:layout_width="@dimen/photo_thumbnail_length"
+                    android:layout_height="@dimen/photo_thumbnail_length"/>
+                <View
+                    android:layout_marginLeft="10dp"
+                    android:background="@color/bg_white"
+                    android:layout_width="@dimen/photo_thumbnail_length"
+                    android:layout_height="@dimen/photo_thumbnail_length"/>
+                <View
+                    android:layout_marginLeft="10dp"
+                    android:background="@color/bg_white"
+                    android:layout_width="@dimen/photo_thumbnail_length"
+                    android:layout_height="@dimen/photo_thumbnail_length"/>
+                <View
+                    android:layout_marginLeft="10dp"
+                    android:background="@color/bg_white"
+                    android:layout_width="@dimen/photo_thumbnail_length"
+                    android:layout_height="@dimen/photo_thumbnail_length"/>
+                <View
+                    android:layout_marginLeft="10dp"
+                    android:background="@color/bg_white"
+                    android:layout_width="@dimen/photo_thumbnail_length"
+                    android:layout_height="@dimen/photo_thumbnail_length"/>
+                
+            </LinearLayout>
+        </FrameLayout>
 
 
     </LinearLayout>
