--- a/app/src/main/res/layout/activity_photo_pager.xml
+++ b/app/src/main/res/layout/activity_photo_pager.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.HomeActivity"
-    android:background="@color/bg_light_gray">
+    tools:context=".activity.PhotoViewPagerActivity"
+    android:background="@color/bg_light_gray"
+    android:orientation="vertical">
 
 
     <android.support.design.widget.AppBarLayout
@@ -24,14 +25,13 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_running_grid"/>
+    <uk.co.senab.photoview.HackyViewPager
+        android:id="@+id/view_pager"
+        android:background="@color/gray_dark"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="27dp"
-        android:src="@mipmap/ic_run"/>
+    </uk.co.senab.photoview.HackyViewPager>
 
-</android.support.design.widget.CoordinatorLayout>
+
+</LinearLayout>
