--- a/app/src/main/res/layout/content_running_grid.xml
+++ b/app/src/main/res/layout/content_running_grid.xml
@@ -9,6 +9,14 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activity.HomeActivity"
     tools:showIn="@layout/activity_running_grid">
+    <TextView
+        android:id="@+id/tv_warning"
+        android:padding="20dp"
+        android:textSize="20dp"
+        android:gravity="center"
+        android:text="点击右下角图标开始跑步"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <android.support.v7.widget.RecyclerView
         android:padding="8dp"
         android:gravity="center"
